--- a/index.html
+++ b/index.html
@@ -3,11 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 2
-        
-    </title>
+    <title>Assignment 2</title>
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Font Awesome for cart icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Link to your external CSS file -->
+    <link rel="stylesheet" href="./bangu.css">
 </head>
 <body>
-    
-</body>
-</html>
+  <!-- Navbar: Responsive width, min height, centered, with padding, shadow, and rounded corners -->
+    <nav class="bg-white p-4  mx-auto my-4 max-w-7xl min-h-[71px] flex items-center">
+        <!-- Main container for navbar content: flex layout, space between items, wraps on small screens -->
+        <div class="container mx-auto flex justify-between items-center flex-wrap w-full">
+            <!-- Logo Section: This div now controls the responsive size of the logo area -->
+            <div class="flex items-center mb-4 sm:mb-0 w-[68px] h-[38px] sm:w-[180px] sm:h-[120px]">
+                <!-- Image tag: Fills its parent container and maintains aspect ratio -->
+                <img src="./assets/logo.png" alt="Faugei Logo" class="w-full h-full object-cover mr-2">
+            </div>
+
+            <!-- Navigation options on the right -->
+            <!-- Adjusted margin-top to -30px to move navigation links further upwards -->
+            <div class="flex items-center text-gray-700 text-sm space-x-4 sm:text-base sm:space-x-6" style="margin-top: -30px;">
+                <!-- These links are hidden on small screens and shown on sm (and larger) screens -->
+                <a href="#" class="hover:text-gray-900 font-bold hidden sm:block">Home</a>
+                <a href="#" class="hover:text-gray-90 font-normal hidden sm:block">Shop</a>
+                <a href="#" class="hover:text-gray-900 font-medium hidden sm:block">About us</a>
+                <!-- Cart option remains visible on all screens -->
+                <a href="#" class="flex items-center hover:text-gray-900 font-medium">
+                    <i class="fas fa-shopping-cart text-lg mr-1 sm:mr-2"></i> Cart ($56)
+                </a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Banner Section -->
+    <section class="container mx-auto mt-7 p-4 flex flex-col-reverse gap-y-7 md:flex-row md:gap-0 items-center justify-between max-w-7xl">
+        <!-- Text Content -->
+        <!-- Changed text-center to text-left and added text-justify for the paragraph -->
+        <div class="md:w-1/2 text-left px-4">
+            <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold leading-tight mb-2">
+                <span class="text-gray-900">ALWAYS</span>
+                <span class="text-orange-600"> FRESH</span>
+            </h1>
+            <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold leading-tight mb-4 text-orange-600">
+                FLOWERS
+            </h1>
+            <p class="text-gray-700 text-base sm:text-lg leading-relaxed max-w-lg mx-auto md:mx-0 text-justify">
+                Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
+                blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.
+            </p>
+        </div>
