my third commit

--- a/index.html
+++ b/index.html
@@ -54,3 +54,74 @@
                 blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.
             </p>
         </div>
+  <!-- Image Content -->
+        <div class="md:w-1/2 flex justify-center md:justify-end">
+            <img src="./assets/hero-flower.png" alt="Fresh Flowers Bouquet" class="w-full md:w-auto h-auto max-h-96 object-contain rounded-lg">
+        </div>
+    </section>
+
+     <!-- Our Plants Section -->
+    <!-- Changed mt-8 to mt-[120px] for 120px top margin -->
+    <section class="container mx-auto mt-[65px] md:mt-[120px] p-4 bg-white max-w-7xl text-center">
+        <h2 class="text-4xl font-bold mb-2">
+            <span class="text-orange-600">Our</span>
+            <span class="text-gray-900"> Plants</span>
+        </h2>
+        <p class="text-gray-700 text-base sm:text-lg leading-relaxed max-w-2xl mx-auto mb-8">
+            Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+        </p>
+
+        <!-- Product Grid -->
+        <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 lg:gap-6">
+            <!-- Product Card Template (repeated 8 times) -->
+                <div class="flex flex-col items-center p-2 border border-gray-200 ">
+                <img src="./assets/sample-flower-image.png" alt="Lily Blossom" class="w-full h-auto object-cover mb-2">
+                <h3 class="text-lg font-semibold text-gray-800">Lily Blossom</h3>
+                <p class="text-orange-600 font-bold mb-4">20 USD</p>
+                <button class="bg-orange-600 text-white py-2 px-4  hover:bg-orange-700 transition-colors duration-200 w-full">ADD TO CART</button>
+            </div>
+            <!-- Repeat Product Card 7 more times -->
+                <div class="flex flex-col items-center p-2 border border-gray-200 ">
+                <img src="./assets/sample-flower-image.png" alt="Lily Blossom" class="w-full h-auto object-cover mb-2">
+                <h3 class="text-lg font-semibold text-gray-800">Lily Blossom</h3>
+                <p class="text-orange-600 font-bold mb-4">20 USD</p>
+                <button class="bg-orange-600 text-white py-2 px-4  hover:bg-orange-700 transition-colors duration-200 w-full">ADD TO CART</button>
+            </div>
+              <div class="flex flex-col items-center p-2 border border-gray-200 ">
+                <img src="./assets/sample-flower-image.png" alt="Lily Blossom" class="w-full h-auto object-cover mb-2">
+                <h3 class="text-lg font-semibold text-gray-800">Lily Blossom</h3>
+                <p class="text-orange-600 font-bold mb-4">20 USD</p>
+                <button class="bg-orange-600 text-white py-2 px-4  hover:bg-orange-700 transition-colors duration-200 w-full">ADD TO CART</button>
+            </div>
+                <div class="flex flex-col items-center p-2 border border-gray-200 ">
+                <img src="./assets/sample-flower-image.png" alt="Lily Blossom" class="w-full h-auto object-cover mb-2">
+                <h3 class="text-lg font-semibold text-gray-800">Lily Blossom</h3>
+                <p class="text-orange-600 font-bold mb-4">20 USD</p>
+                <button class="bg-orange-600 text-white py-2 px-4  hover:bg-orange-700 transition-colors duration-200 w-full">ADD TO CART</button>
+            </div>
+             <div class="flex flex-col items-center p-2 border border-gray-200 ">
+                <img src="./assets/sample-flower-image.png" alt="Lily Blossom" class="w-full h-auto object-cover mb-2">
+                <h3 class="text-lg font-semibold text-gray-800">Lily Blossom</h3>
+                <p class="text-orange-600 font-bold mb-4">20 USD</p>
+                <button class="bg-orange-600 text-white py-2 px-4  hover:bg-orange-700 transition-colors duration-200 w-full">ADD TO CART</button>
+            </div>
+     <div class="flex flex-col items-center p-2 border border-gray-200 ">
+                <img src="./assets/sample-flower-image.png" alt="Lily Blossom" class="w-full h-auto object-cover mb-2">
+                <h3 class="text-lg font-semibold text-gray-800">Lily Blossom</h3>
+                <p class="text-orange-600 font-bold mb-4">20 USD</p>
+                <button class="bg-orange-600 text-white py-2 px-4  hover:bg-orange-700 transition-colors duration-200 w-full">ADD TO CART</button>
+            </div>
+        <div class="flex flex-col items-center p-2 border border-gray-200 ">
+                <img src="./assets/sample-flower-image.png" alt="Lily Blossom" class="w-full h-auto object-cover mb-2">
+                <h3 class="text-lg font-semibold text-gray-800">Lily Blossom</h3>
+                <p class="text-orange-600 font-bold mb-4">20 USD</p>
+                <button class="bg-orange-600 text-white py-2 px-4  hover:bg-orange-700 transition-colors duration-200 w-full">ADD TO CART</button>
+            </div>
+             <div class="flex flex-col items-center p-2 border border-gray-200 ">
+                <img src="./assets/sample-flower-image.png" alt="Lily Blossom" class="w-full h-auto object-cover mb-2">
+                <h3 class="text-lg font-semibold text-gray-800">Lily Blossom</h3>
+                <p class="text-orange-600 font-bold mb-4">20 USD</p>
+                <button class="bg-orange-600 text-white py-2 px-4  hover:bg-orange-700 transition-colors duration-200 w-full">ADD TO CART</button>
+            </div>
+        </div>
+    </section>
