--- a/index.html
+++ b/index.html
@@ -125,3 +125,173 @@
             </div>
         </div>
     </section>
+    
+    <section class="container mx-auto mt-16 p-4 bg-white  flex flex-col md:flex-row items-stretch justify-between max-w-7xl">
+        <!-- Image Column -->
+        <div class="md:w-1/2 relative mb-8 md:mb-0 image-container-relative order-first md:order-none flex justify-center items-center">
+            <!-- Adjusted image size for mobile and centered it -->
+            <img src="./assets/flower-store.png" alt="Flower arrangement" class="w-54 h-54 object-cover rounded-lg md:w-full md:h-full">
+            <!-- Trusted Seller Badge - Removed 'hidden md:block' to control visibility via CSS only -->
+            <div class="trusted-badge">
+                <!-- Image source for the badge is now from the provided file_content -->
+                <img src="./assets/trusted-badge.png" class= "w-4 h-4">
+            </div>
+        </div>
+
+        <!-- Text Column -->
+        <!-- Removed text-center to allow external CSS to control mobile alignment -->
+        <div class="md:w-1/2 px-4 md:text-left">
+            <h2 class="text-4xl font-bold mb-4 p-8 ">Flower & Plants<br>Lover</h2>
+            <ul class="list-none p-0 space-y-4  px-16 ">
+                <li class="flex items-start ">
+                    <span class="text-orange-600 mr-2">&#8226;</span> <!-- Bullet point -->
+                    <p class="text-gray-700 text-base leading-relaxed">
+                        Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+                    </p>
+                </li>
+                <li class="flex items-start">
+                    <span class="text-orange-600 mr-2">&#8226;</span> <!-- Bullet point -->
+                    <p class="text-gray-700 text-base leading-relaxed">
+                        Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+                    </p>
+                </li>
+                <li class="flex items-start">
+                    <span class="text-orange-600 mr-2">&#8226;</span> <!-- Bullet point -->
+                    <p class="text-gray-700 text-base leading-relaxed">
+                        Indulge your senses with the beauty and fragrance and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+
+    
+        <!-- Latest Deals Section -->
+    <!-- Adjusted for full width and mobile-first padding/margins -->
+    <section class="container mx-auto mt-16 p-4 bg-white  w-full text-center">
+        <!-- Added a div to group heading and paragraph for easier margin targeting -->
+        <div class="latest-deals-heading-group mb-12 md:mb-8"> <!-- Adjusted margin-bottom for mobile -->
+            <h2 class="text-4xl font-bold mb-2">
+                <span class="text-orange-600">Latest</span>
+                <span class="text-gray-900"> Deals</span>
+            </h2>
+            <p class="text-gray-700 text-base sm:text-lg leading-relaxed max-w-2xl mx-auto mb-8">
+                Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+            </p>
+        </div>
+
+<div class="flex flex-col md:flex-row gap-4 justify-center items-center">
+            <!-- Left Column: Contains the first two cards for desktop -->
+            <div class="flex flex-col gap-4 w-full md:w-1/2 lg:w-1/3">
+                <!-- First Card -->
+                <!-- Adjusted height and width for mobile to 184.5px and 361px respectively -->
+                <div class="relative overflow-hidden rounded-lg shadow-md h-[184.5px] w-[361px] mx-auto md:h-64 md:w-full">
+                    <img src="./assets/deal-bloom.png" alt="Bloom Plant" class="absolute inset-0 w-full h-full object-cover">
+                    <!-- Centered text and removed button background, added underline -->
+                    <div class="absolute inset-0 bg-gradient-to-r from-black/50 to-transparent flex flex-col justify-center items-center p-4 text-center">
+                        <p class="text-white font-bold text-lg ">60% Off | Bloom Plant</p>
+                        <button class="bg-transparent text-white text-sm py-1 px-3 rounded-md mt-2 w-fit hover:bg-gray-100 transition-colors duration-200 mx-auto underline">Shop Now</button>
+                    </div>
+                </div>
+                <!-- Second Card -->
+                <!-- Adjusted height and width for mobile to 184.5px and 361px respectively -->
+                <div class="relative overflow-hidden rounded-lg shadow-md h-[184.5px] w-[361px] mx-auto md:h-64 md:w-full">
+                    <img src="./assets/deal-ana.png" alt="Ana Plant" class="absolute inset-0 w-full h-full object-cover">
+                    <!-- Centered text and removed button background, added underline -->
+                    <div class="absolute inset-0 bg-gradient-to-r from-black/50 to-transparent flex flex-col justify-center items-center p-4 text-center">
+                        <p class="text-white font-bold text-lg">30% Off | Ana Plant</p>
+                        <button class="bg-transparent text-white text-sm py-1 px-3 rounded-md mt-2 w-fit hover:bg-gray-100 transition-colors duration-200 mx-auto underline">Shop Now</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Third Card (Right Column on desktop) -->
+            <!-- Adjusted height and width for mobile to 184.5px and 361px respectively -->
+            <div class="relative overflow-hidden rounded-lg shadow-md h-[184.5px] w-[361px] mx-auto md:h-[540px] md:w-1/2 lg:w-2/3">
+                <img src="./assets/deal-zabo.png" alt="Zabo+Plant" class="absolute inset-0 w-full h-full object-cover">
+                <!-- Centered text and removed button background, added underline -->
+                <div class="absolute inset-0 bg-gradient-to-r from-black/50 to-transparent flex flex-col justify-center items-center p-4 text-center">
+                    <p class="text-white font-bold text-xl md:text-4xl">25% Off | Zabo+Plant</p>
+                    <button class="bg-transparent text-white text-sm py-1 px-3 rounded-md mt-2 w-fit hover:bg-gray-100 transition-colors duration-200 mx-auto underline  md:text-2xl">Shop Now</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+<!-- new subscription banner -->
+    <section class="mt-[65px] md:mt-[120px] p-4 relative overflow-hidden flex flex-col items-center justify-center text-center w-full" style="height: 533px;">
+        <!-- Background Image -->
+        <img src="./assets/news-letter-bg.png" alt="Colorful Flowers Background" class="absolute inset-0 w-full h-full object-cover z-0">
+        <!-- Overlay to make text readable -->
+        <div class="absolute inset-0 bg-black opacity-50 z-10"></div>
+
+        <!-- Content -->
+        <div class="relative z-20 p-4 w-full max-w-[830px] mx-auto" style="height: 141px;">
+            <h2 class="text-white text-4xl sm:text-5xl lg:text-6xl font-extrabold mb-8">Join the colorful Bunch</h2>
+            <!-- Removed gap-2 to make input and button collide -->
+            <div class="flex flex-row items-center justify-center w-full">
+                <input type="email" placeholder="Write email" class="p-3 rounded-none border border-gray-300 w-full flex-grow text-gray-900 focus:outline-none focus:ring-2 focus:ring-orange-500">
+                <button class="bg-orange-600 text-white py-3 px-6 rounded-none font-semibold hover:bg-orange-700 transition-colors duration-50 w-full sm:w-auto">Subscribe</button>
+            </div>
+        </div>
+    </section>
+
+
+
+     <!-- Footer Section -->
+ <!-- Footer Section -->
+  <!-- Footer Section -->
+  <footer class="bg-white text-gray-700 w-full mt-8" style="height: 348px; padding-top: 50px; padding-bottom: 50px;padding-left: 100px; ">
+            <div class="container mx-auto max-w-[1120px] h-[248px] flex flex-col md:flex-row justify-between items-start footer-content-wrapper">
+                <!-- Left Section: Logo and Description -->
+                <div class="flex flex-col items-center md:items-start text-center md:text-left md:w-1/3 footer-logo-description">
+                    <img src="./assets/logo.png" alt="Faugei Logo" class="w-[180px] h-[120px] mb-4 p">
+                    <p class="text-sm leading-relaxed max-w-xs ">
+                        Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                    </p>
+                </div>
+
+                <!-- Middle Section: Navigation Links -->
+                <!-- Changed to flex container with two inner flex columns for desktop -->
+                <div class="flex md:w-1/3 justify-around footer-nav-links">
+                    <!-- First column of links -->
+                    <div class="flex flex-col  space-y-8  text-gray-700 text-sm" style="text-align: center; margin-left: 50px; padding-right: 50px;">
+                        <a href="#" class="hover:text-orange-600">Home</a>
+                        <a href="#" class="hover:text-orange-600">About Us</a>
+                        <a href="#" class="hover:text-orange-600">Blog</a>
+                        <a href="#" class="hover:text-orange-600">FAQ</a>
+                        <a href="#" class="hover:text-orange-600">Contact Us</a>
+                    </div>
+                    <!-- Second column of links -->
+                    <div class="flex flex-col space-y-8  text-gray-700 text-sm" >
+                        <a href="#" class="hover:text-orange-600">Features</a>
+                        <a href="#" class="hover:text-orange-600">Pricing</a>
+                        <a href="#" class="hover:text-orange-600">Privacy Policy</a>
+                        <a href="#" class="hover:text-orange-600">Terms of Service</a>
+                        <a href="#" class="hover:text-orange-600">Help Center</a>
+                    </div>
+                </div>
+
+                <!-- Right Section: Social Media Icons -->
+                <!-- Adjusted w-6 h-6 for icons -->
+                <div class="flex space-x-6 md:w-1/3 justify-center md:justify-end footer-social-icons px-4 " style="padding-left: 100px;">
+                    <a href="#" class="text-gray-700 hover:text-orange-600">
+                        <img src="./assets/icon-linkedin.png" alt="LinkedIn" class="w-6 h-6 rounded">
+                    </a>
+                    <a href="#" class="text-gray-700 hover:text-orange-600">
+                        <span class="text-xl font-bold text-gray-700">X</span>
+                    </a>
+                    <a href="#" class="text-gray-700 hover:text-orange-600">
+                        <img src="./assets/icon-facebook.png" alt="Facebook" class="w-6 h-6 rounded">
+                    </a>
+                    <a href="#" class="text-gray-700 hover:text-orange-600">
+                        <img src="./assets/icon-youtube.png" alt="YouTube" class="w-6 h-6 rounded">
+                    </a>
+                </div>
+            </div>
+        </footer>
+    </div>
+</body>
+</html>
+
